--- a/Slides.Rmd
+++ b/Slides.Rmd
@@ -46,7 +46,7 @@ use_extra_styles(hover_code_line = TRUE, mute_unhighlighted_code = FALSE)
 class: .incremental
 
 ## Outline of this talk!
-- .f2[What is Geo-spatial analysis?]
+- .f2[What is Geospatial analysis?]
 --
 
 - .f2[Why use scripting for Spatial analysis?]
@@ -57,7 +57,7 @@ class: .incremental
   - Basics of R. 
 --
 
-- .f2[Geo spatial Analysis with R.]
+- .f2[Geospatial Analysis with R.]
   - Basics of GIS datatypes
   - Raster operations.
   - Vector operations.
@@ -70,24 +70,26 @@ class: .incremental
 ---
 class: .incremental
 ## What do we understand from "Geospatial Analysis"?
+.f3[
+- A multidisciplinary approach involving patterns identification, relationships, and trends within geographic data.
 
-A multidisciplinary approach involving patterns identification, relationships, and trends within geographic data. 
-
-- Concepts from geography, cartography, geographic information systems (GIS), and statistical analysis to gain insights into spatial phenomena. 
-
-.f3[Key components of geo-spatial analysis include:]
-
---
-- **Geographic Information Systems (GIS):** GIS is a technology that enables the capture, storage, analysis, and visualization of spatial data.
+- Concepts from geography, cartography, geographic information systems (GIS), and statistical analysis to gain insights into spatial phenomena.
+] 
 
 --
-- **Remote Sensing:** Remote sensing involves acquiring information about the Earth's surface without direct physical contact.
+### Key components of geospatial analysis include
 
 --
-- **Spatial Statistics:** This involves the application of statistical techniques to analyze spatial patterns and relationships.
+- **Geographic Information Systems (GIS):** GIS is a technology that enables the capture, storage, analysis, and visualization of spatial data. <br />
 
 --
-- **Spatial Modeling:** This involves creating mathematical representations of spatial relationships to simulate and predict real-world phenomena. 
+- **Remote Sensing:** Remote sensing involves acquiring information about the Earth's surface without direct physical contact. <br /> 
+
+--
+- **Spatial Statistics:** This involves the application of statistical techniques to analyze spatial patterns and relationships. <br /> 
+
+--
+- **Spatial Modeling:** This involves creating mathematical representations of spatial relationships to simulate and predict real-world phenomena. <br /> 
 
 ---
 class: .incremental
@@ -128,11 +130,11 @@ class: .incremental
 ]
  
 ---
-## The shift towards open geospatial:
+## The shift towards open geospatial
 Open source refers to software that is designed to be publicly accessible, allowing anyone to see, modify, and distribute the code as they see fit.
 
 .pull-left[
-- Open Data applies the principles of free and open to geo-spatial data.
+- Open Data applies the principles of free and open to geospatial data.
 
 - Open Education applies the principles of open source to the creation of teaching materials allowing organizations to share syllabus materials reducing cost and reaching a wider audience.
 
@@ -157,17 +159,19 @@ Open source refers to software that is designed to be publicly accessible, allow
 
 ---
 class: .incremental
-## Basic data type in GIS
+## Basic data types in GIS
+.pull-left[
 - **Raster data** consists of continuous cells or pixels, such as elevation or satellite imagery.
 
---
 - **Vector data** is the most common type of GIS data. Vector data represents geographic data symbolized as points, lines, or polygons.
 
---
-
 - **GeoPackage (GPKG)** is an open, non-proprietary, platform-independent and standards-based data format for geographic information systems. 
-  - GeoPackage can store multiple types of geospatial data, including vector data, raster data, and attribute data.
-  - Portability: GeoPackage is a single file format that can be easily transferred between different devices, operating systems, and GIS software.
+  - Can store multiple types of geospatial data
+  - Portability.
+]
+.pull-right[
+<img src="images/Data.png" class="w-80 br4 dib center">
+]
 
 ---
 class: .incremental
@@ -205,12 +209,13 @@ This package is an attempt to climb on the shoulders of giants (GDAL, PROJ, GEOS
 
 - `terra` provides methods to manipulate geographic (spatial) data in "raster" and "vector" form.
 
-- **Vector** spatial data (points, lines, polygons) are typically used to represent discrete spatial entities, such as a road, country, or bus stop
+<img src="images/terra.png" class="w-80 br4 dib center">
 
-.footnote[https://rspatial.org/]
+.footnote[https://rspatial.org/ | https://github.com/rspatial/terra]
 
 ---
-## Adding basic Map in to the slides 
+## Adding basic Map in to the slides
+A javascript library for R.
 ```{r fig.height=7, echo=FALSE}
 if(!require(leaflet)){install.packages("leaflet");library(leaflet)}
 if(!require(terra)){install.packages("terra");library(terra)}
@@ -269,11 +274,18 @@ knitr::include_graphics("images/Ahm10.png", error = FALSE)
 ]
 
 ---
+## Reading vector data and copping
+```{r, eval=FALSE}
+if(!require(sf)){install.packages("sf");library(sf)}
+raster_data <- rast( "./data/Large Tiff/Landsat-8-B2.TIF")
+vector_data <- vect(st_read("./Data/Large Tiff/Bounding_Box.gpkg"))
+cropped_data <- terra::crop(x = raster_data, y = vector_data, mask = TRUE) 
 
-## This is different from the traditional GIS software:
-<img src="images/Incorrect_Projection.png" class="w-80 br4 dib center">
+writeRaster(x = cropped_data, filename = "./data/Cropped_Image.tif")
 
-.b.blue[Images with different projection (EPSG:32642 and EPSG:32643 image.)]
+```
+
+<img src="images/Ahm_Data.png" class="w-50 br4 dib center">
 
 ---
 ## A raster data file
@@ -282,9 +294,45 @@ knitr::include_graphics("images/Ahm10.png", error = FALSE)
 raster_data <- rast(x = "./data/LS_8_Band_2.tif") # reading the file
 raster_data # Printing
 ```
-
 ---
 
+## This is different from the traditional GIS software:
+<img src="images/Incorrect_Projection.png" class="w-80 br4 dib center">
+
+.b.blue[Images with different projection (EPSG:32642 and EPSG:32643 image.)]
+
+---
+class: .incremental
+## Landsat Bands
+
+.pull-left[
+```{r, results='markup'}
+rast_fname <- paste0("./data/LS_8_Band_",c(1:7,10),".tif")
+sample_rast <- rast(rast_fname)
+names(sample_rast) <- c('ultra-blue', 'blue', 
+                        'green', 'red', 'NIR', 
+                        'SWIR1', 'SWIR2',"TIR")
+
+sample_rast
+```
+]
+
+.pull-right[
+<img src="images/Landsat_Band.jpg" class="w-80 br1 dib center">
+]
+
+---
+## Single band and composite maps
+```{r, fig.dim=2,eval=FALSE}
+par(mfrow = c(2,2))
+plot(b2, main = "Blue", col = gray(0:100 / 100))
+plot(b3, main = "Green", col = gray(0:100 / 100))
+plot(b4, main = "Red", col = gray(0:100 / 100))
+plot(b5, main = "NIR", col = gray(0:100 / 100))
+```
+<img src="images/Band_GrayScale.png" class="w-60 br4 dib center">
+
+---
 ## True color composite with visible RGB band
 .pull-left[
 ```{r, eval=FALSE}
@@ -333,51 +381,6 @@ plotRGB(landsatFCC, stretch = "lin")
 ]
 
 ---
-## Reading vector data and copping
-```{r, eval=FALSE}
-if(!require(sf)){install.packages("sf");library(sf)}
-raster_data <- rast( "./data/Large Tiff/Landsat-8-B2.TIF")
-vector_data <- vect(st_read("./Data/Large Tiff/Bounding_Box.gpkg"))
-cropped_data <- terra::crop(x = raster_data, y = vector_data, mask = TRUE) 
-
-writeRaster(x = cropped_data, filename = "./data/Cropped_Image.tif")
-
-```
-
-<img src="images/Ahm_Data.png" class="w-50 br4 dib center">
-
----
-## Single band and composite maps
-```{r, fig.dim=2,eval=FALSE}
-par(mfrow = c(2,2))
-plot(b2, main = "Blue", col = gray(0:100 / 100))
-plot(b3, main = "Green", col = gray(0:100 / 100))
-plot(b4, main = "Red", col = gray(0:100 / 100))
-plot(b5, main = "NIR", col = gray(0:100 / 100))
-```
-<img src="images/Band_GrayScale.png" class="w-60 br4 dib center">
-
----
-class: .incremental
-## Landsat Bands
-
-.pull-left[
-```{r, results='markup'}
-rast_fname <- paste0("./data/LS_8_Band_",c(1:7,10),".tif")
-sample_rast <- rast(rast_fname)
-names(sample_rast) <- c('ultra-blue', 'blue', 
-                        'green', 'red', 'NIR', 
-                        'SWIR1', 'SWIR2',"TIR")
-
-sample_rast
-```
-]
-
-.pull-right[
-<img src="images/Landsat_Band.jpg" class="w-80 br1 dib center">
-]
-
----
 ## Relation between bands
 A scatterplot matrix can be helpful in exploring relationships between raster layers. This can be done with the pairs function. 
 .pull-left[
@@ -390,7 +393,6 @@ pairs(sample_rast[[1:2]], main = "UB versus Blue")
 ```{r, fig.height=6}
 pairs(sample_rast[[4:5]], main = "Red versus NIR")
 ```
-
 ]
 
 ---
@@ -407,7 +409,6 @@ vi <- function(img, k, i) {
     return(vi)
 }
 ```
-
 ---
 ##  Compute NDVI and GNDVI with Landsat-8 bands.
 .pull-left[
@@ -425,7 +426,6 @@ gndvi <- vi(sample_rast, 5, 3)
 plot(gndvi, col=rev(terrain.colors(10)), main="GNDVI")
 ```
 ]
-
 
 ---
 ## Histogram
@@ -549,10 +549,5 @@ Concept and some codes are adopted form "Aniruddha Ghosh and Robert J. Hijmans"
 ## Reading Material
 - https://ankitdeshmukh.com/post/
 - https://github.com/anixn/Geospatial_Analysis_with_R.git
-- https://agroimpacts.github.io/geospaar/
-- https://www.usgs.gov/landsat-missions/landsat-enhanced-vegetation-index
-- https://www.datanovia.com/en/blog/top-r-color-palettes-to-know-for-great-data-visualization/
-- https://pro.arcgis.com/en/pro-app/latest/arcpy/image-analyst/gnvdi.htm
-- https://cran.r-project.org/web/packages/HSAUR/vignettes/Ch_introduction_to_R.pdf
 - https://r.geocompx.org/
 - https://rspatial.org/
